# databaseHomeWork-rs

./: .gitignore  Cargo.toml  README.md  application.yml  sql.txt  tailwind.config.js
backend/: Cargo.toml  sql.txt
backend/src/: lib.rs  main.rs
backend/src/config/: mod.rs
backend/src/database/: mod.rs
backend/src/information/: mod.rs
backend/src/service/: mod.rs
src/: database.rs  functions.rs  information.rs  lib.rs  main.rs  utils.rs
src/components/: add_page.rs  mod.rs  utils.rs
src/components/add_page/: add_attendance.rs  add_employee.rs  add_regulations.rs  add_salary.rs  mod.rs
src/components/delete_page/: delete_object.rs  mod.rs
src/components/modify_page/: basic_page.rs  mod.rs  modify_object.rs
src/components/query_page/: department_search.rs  mod.rs  personal_search.rs  type_search.rs
src/config/: mod.rs
src/database/: mod.rs
src/information/: mod.rs
src/service/: mod.rs  sql.rs
