[package]
name = "databaseHomeWork-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#async runtime lib
tokio = { version = "1", features = ["full", "sync"] }
# logging(option)
log = "0.4"
fast_log = "1.5.44"
# serde/rbs (required)
serde = { version = "1", features = ["derive"] }
rbs = { version = "0.1" }
rbdc = "0.1.22"
rbatis = { version = "4.0" }
# support for mysql
rbdc-mysql = { version = "0.1.17" }
once_cell = "1.16.0"
yaml-rust = "0.4.5"
anyhow = "1.0.66"
serde_json = "1.0.87"
function_name = "0.3.0"
